# rust-webapp

./: .env  .gitignore  Cargo.toml  Dockerfile  configuration.yaml  docker-compose.yml
.github/workflows/: audit-on-push.yml  ci.yml
app/: Cargo.toml
app/src/: lib.rs  main.rs
app/tests/: health_check.rs
src/: configuration.rs  lib.rs  main.rs  startup.rs  telemetry.rs
src/routes/: subscriptions.rs
src/tests/: health_check.rs
tests/: health_check.rs
