[package]
name = "app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "app"

[dependencies]
actix-web = "4"
chrono = "0.4.19"
config = { version = "0.13", default-features = false, features = ["yaml"] }
futures = "0.3.21"
reqwest = "0.11"
serde = { version = "1", features = ["derive"] }
sqlx = { version = "0.6.0", features = ["macros", "postgres", "runtime-actix-rustls", "uuid", "chrono", "migrate"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
uuid = { version = "1.1.2", features = ["v4"] }
