[package]
name = "app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "app"

[dependencies]
actix-web = "4"
chrono = "0.4.19"
config = { version = "0.13", default-features = false, features = ["yaml"] }
futures = "0.3.21"
reqwest = "0.11"
serde = { version = "1", features = ["derive"] }
sqlx = { version = "0.6.0", features = ["macros", "postgres", "runtime-actix-rustls", "uuid", "chrono", "migrate", "offline""] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tracing = { version = "0.1.35", features = ["log"] }
tracing-actix-web = "0.6.0"
tracing-bunyan-formatter = "0.3.3"
tracing-log = "0.1.3"
tracing-subscriber = { version = "0.3.14", features = ["registry", "env-filter"] }
uuid = { version = "1.1.2", features = ["v4"] }

[dev-dependencies]
once_cell = "1.13.0"
